--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -20,18 +20,18 @@ seo:
 header:
  - image: /images/meet-aj-hackett-aj-hackett-international.png
    position: 50% 50%
-   label: 
+   label: AJ Hackett smiling on top of a bungy tower, enjoying the moment.
    title: AJ Hackett
    text: A life less ordinary
 image-1: /images/aj-hackett-bungy-eiffel-tower-paris-france.png
-image-1-position:
-image-1-alt:
+image-1-position: 50% 50%
+image-1-alt: AJ Hackett leaping off the Eiffel Tower in 1987, showcasing his iconic bungy jump that launched his adventure career.
 image-2: /images/tandem-bungy-jump-aj-hackett-international.png
 image-2-position: 60% 50%
-image-2-alt:
+image-2-alt: Tandem bungy jump off Macau Tower with two seniors, demonstrating the thrill and inclusivity of Skypark by AJ Hackett.
 image-3: /images/adventure-tourism-aj-hackett-international.png
-image-3-position:
-image-3-alt:
+image-3-position: 50% 50%
+image-3-alt: AJ Hackett walking towards the camera with a smile at one of the Skypark sites, exuding excitement and joy.
 quote-image: /images/aj-hackett-bungy-aj-hackett-international.png
 quote-image-position: 50% 50%
 ---
