--- a/timeline.html
+++ b/timeline.html
@@ -20,7 +20,7 @@ seo:
 header:
  - image: /images/aj-hackett-international-timeline-banner-image.jpg
    position: 50% 50%
-   label: 
+   label: AJ Hackett mid-bungy jump from below, screaming into the camera with the sky and bungy tower visible in the background.
    title: Timeline
    text: The Evolution of Adventure
 timeline:
