--- a/index.html
+++ b/index.html
@@ -30,95 +30,95 @@ seo:
 header:
  - image: /images/aj-hackett-international-banner-image.png
    position: 50% 50%
-   label: 
+   label: AJ Hackett walking towards the camera at a Skypark site, showcasing his adventurous spirit and leadership.
    title: AJ Hackett International
    text: "Every day, do something that reminds you that you’re still alive."
 site:
  - location: Cairns
-   url:
-   url-alt:
+   url: skypark-aj-hackett.html#cairns
+   url-alt: "Explore the Skypark Cairns section"
    image: /images/cairns-australian-skypark-by-aj-hackett-international.png
    image-position: 50% 70%
-   image-alt:
+   image-alt: Crew member assisting a jumper at Skypark Cairns tower.
  - location: Macau
-   url:
-   url-alt:
+   url: skypark-aj-hackett.html#macau
+   url-alt: "Explore the Skypark Macau section"
    image: /images/macau-skypark-by-aj-hackett-international.png
-   image-position:
-   image-alt:
+   image-position: 50% 50%
+   image-alt: Person mid-bungy jump from the Skypark tower in Macau.
  - location: Sentosa
-   url:
-   url-alt:
+   url: skypark-aj-hackett.html#sentosa
+   url-alt: "Explore the Skypark Sentosa section"
    image: /images/temp-img.jpg
    image-position:
    image-alt:
  - location: Normandie 
-   url:
-   url-alt:
+   url: skypark-aj-hackett.html#normandie
+   url-alt: "Explore the Skypark Normandie section"
    image: /images/temp-img.jpg
    image-position:
    image-alt:
 pondok:
  - image: /images/morning-light-at-pondok-santi-estate-gili-trawangan.png
-   position: 
-   alt: Morning light at Pondok Santi Estate, Gili Trawangan
+   position: 50% 50%
+   alt: Morning light at Pondok Santi Estate, Gili Trawangan.
 experiences:
   - name: Bungy
-    url:
-    url-alt:
+    url: experiences-aj-hackett.html#bungy
+    url-alt: Learn more about bungy jumping at SkyPark by AJ Hackett
   - name: Swings
-    url:
-    url-alt:
+    url: experiences-aj-hackett.html#swings
+    url-alt: Learn more about swings at SkyPark by AJ Hackett
   - name: Zipline
-    url:
-    url-alt:
+    url: experiences-aj-hackett.html#zipline
+    url-alt: Learn more about ziplines at SkyPark by AJ Hackett
   - name: Skybridge & Skycube
-    url:
-    url-alt:
+    url: experiences-aj-hackett.html#skybridge
+    url-alt: Learn more about the skybridge and skycube at SkyPark by AJ Hackett
   - name: Walk The Plank
-    url:
-    url-alt:
+    url: experiences-aj-hackett.html#walktheplank
+    url-alt: Learn more about walk the plank at SkyPark by AJ Hackett
   - name: Luge
-    url:
-    url-alt:
+    url: experiences-aj-hackett.html#luge
+    url-alt: Learn more about the luge at SkyPark by AJ Hackett
   - name: Adventure Parks
-    url:
-    url-alt:
+    url: experiences-aj-hackett.html#adventureparks
+    url-alt: Learn more about the adventure parks at SkyPark by AJ Hackett
   - name: Climbing Walls
-    url:
-    url-alt:
+    url: experiences-aj-hackett.html#climbingwalls
+    url-alt: Learn more about the climbing walls at SkyPark by AJ Hackett
 projects:
  - image: /images/skypark-cairns-australia-new-roof-aj-hackett-international.png
-   position: 
-   alt:
+   position: 50% 50%
+   alt: Skypark Cairns roof under enhancement with construction work visible.
 sustainability:
  - image: /images/sustainability-pondok-santi-estate-gili-trawangan-indonesia.png
-   position: 
-   alt:
+   position: 50% 50%
+   alt: Baby plants in a nursery, highlighting AJ Hackett International's sustainability efforts.
 accessibility:
  - image: /images/accessibility-aj-hackett-international.png
-   position: 
-   alt:
+   position: 50% 50%
+   alt: Man in a wheelchair enjoying a bungy jump, highlighting accessibility at AJ Hackett International.
 reconciliation:
  - image: /images/reconciliation-skypark-australia-aj-hackett-international.png
-   position: 
-   alt:
+   position: 50% 50%
+   alt: Artwork symbolizing reconciliation and respect for Traditional Custodians, reflecting AJ Hackett International’s commitment to meaningful initiatives.
 community:
  - image: /images/community-aj-hackett-international.png
-   position: 
-   alt:
+   position: 50% 50%
+   alt: Community event at Skypark Cairns with a large group of people gathered and participating in activities.
 team:
  - image: /images/meet-the-team-aj-hackett-international-banner.png
-   position: 
-   alt:
+   position: 50% 50%
+   alt: AJ Hackett preparing for a bungy jump with the team gathered around him.
 purpose:
  - image: /images/purpose-promise-values-aj-hackett-international.png
-   position: 
-   alt:
+   position: 50% 50%
+   alt: Man preparing to bungy jump off Macau Skypark tower, embodying adventure and excitement.
 safety:
  - image: /images/safety-management-banner-aj-hackett-international.png
-   position: 
-   alt:
+   position: 50% 50%
+   alt: Crew members ensuring safety and security at Skypark by AJ Hackett.
 ---
 
 <!-----Meet AJ-------->
@@ -134,7 +134,7 @@ safety:
             <p class="mb-10p sm:mb-5p"> Welcome to the World of Adventure with AJ Hackett! Dive into the story of the man who turned adrenaline into an empire. Discover more about AJ's journey and vision
             </p>
             <div class="mb-15p sm:mb-0 sm:mt-10p">
-              <a href="/meet-aj-hackett.html" class="button" aria-label="">Find out more</a>
+              <a href="/meet-aj-hackett.html" class="button" aria-label="Learn more about AJ Hackett and his adventure journey">Find out more</a>
           </div>
         </div>
         <div class="relative h-full min-h-30 sm:min-h-50">
@@ -207,7 +207,7 @@ safety:
       <div class="col-span-1 pr-5p order-2 sm:order-none">
         <p class="pb-10p sm:pb-5p">Discover Pondok Santi Estate, a luxurious retreat nestled in the tranquil landscapes of Indonesia. Immerse yourself in serene beauty and exceptional comfort at our boutique resort, where every moment is designed to rejuvenate and inspire.</p>
         <div class="mb-15p sm:mb-0 sm:mt-10p md:mt-5p">
-          <a href="/pondok-santi-estate.html" class="button" aria-label="">Find out more</a>
+          <a href="/pondok-santi-estate.html" class="button" aria-label="Learn more about Pondok Santi Estate, a luxurious retreat in Gili Trawangan">Find out more</a>
         </div>
       </div>
     </div>
@@ -238,7 +238,7 @@ safety:
       <div class="col-span-1 pr-5p">
         <p class="pb-5p pt-5p sm:pt-0">Discover the exciting developments happening at AJ Hackett International as we continue to push the boundaries of adventure. Our ongoing projects are designed to elevate the Skypark experience with innovative upgrades and thrilling new features. Explore how we’re enhancing our sites around the globe, bringing new dimensions of excitement and comfort to our adventure parks.</p>
         <div class="mb-15p sm:mb-0 mt-5p sm:mt-10p md:mt-5p">
-          <a href="/projects.html" class="button" aria-label="">Find out more</a>
+          <a href="/projects.html" class="button" aria-label="Learn more about our ongoing projects and developments">Find out more</a>
       </div>
       </div>
     </div>
@@ -267,7 +267,7 @@ safety:
       <div class="col-span-1 pr-5p order-2 sm:order-none">
         <p class="pb-5p">Discover how AJ Hackett International is making strides toward a greener future. Our commitment to sustainability drives us to create positive impacts for our people, customers, and the planet. Explore the innovative practices we’re implementing across our Skypark locations to ensure that adventure and conservation go hand in hand. Learn more about our efforts to achieve carbon neutrality and promote environmental stewardship through various initiatives at AJ Hackett International.</p>
         <div class="mb-15p sm:mb-0 mt-5p sm:mt-10p md:mt-5p">
-          <a href="/sustainability.html" class="button" aria-label="">Find out more</a>
+          <a href="/sustainability.html" class="button" aria-label="Learn about AJ Hackett International's sustainability efforts">Find out more</a>
         </div>
       </div>
     </div>
@@ -297,7 +297,7 @@ safety:
       <div class="col-span-1 pr-5p">
         <p class="pb-5p pt-5p sm:pt-0">At AJ Hackett International, we believe that adventure should be accessible to everyone, regardless of physical or mental abilities. With a rich history of guiding visitors with special needs through our activities, we ensure that everyone can experience the thrill of pushing their limits. Whether it's someone bungy jumping in a wheelchair or a parent conquering their first jump, our expert teams are dedicated to helping individuals break barriers and build confidence. Discover how our inclusive approach to adventure empowers people of all abilities to challenge themselves and embrace new experiences.</p>
         <div class="mb-15p sm:mb-0 mt-5p sm:mt-10p md:mt-5p">
-          <a href="/accessibility.html" class="button" aria-label="">Find out more</a>
+          <a href="/accessibility.html" class="button" aria-label="Learn more about accessibility at AJ Hackett International">Find out more</a>
       </div>
       </div>
     </div>
@@ -327,7 +327,7 @@ safety:
       <div class="col-span-1 pr-5p order-2 sm:order-none">
         <p class="pb-5p">In 2024, AJ Hackett International proudly received endorsement from Reconciliation Australia for our 'Reflect RAP'—a Reconciliation Action Plan that sets the groundwork for meaningful reconciliation initiatives across our business. We honor the Traditional Custodians by recognizing their deep connection to the land and their invaluable knowledge passed down through generations. Our partnership with the Djapugay community at Skypark Cairns serves as a guiding example for our global sites, reinforcing our commitment to sustainability and the protection of our natural environment. Explore how we are shaping a future rooted in respect and reconciliation.</p>
         <div class="mb-15p sm:mb-0 mt-5p sm:mt-10p md:mt-5p">
-          <a href="/reconciliation.html" class="button" aria-label="">Find out more</a>
+          <a href="/reconciliation.html" class="button" aria-label="Learn about AJ Hackett International’s reconciliation initiatives and partnership with the Djapugay community">Find out more</a>
         </div>
       </div>
     </div>
@@ -357,7 +357,7 @@ safety:
       <div class="col-span-1 pr-5p">
         <p class="pb-5p pt-5p sm:pt-0">At AJ Hackett International, we believe that our connection to the community is as important as the adventures we create. Our community initiatives are designed to foster deep ties with the people and places that support us, ensuring that we give back in meaningful ways. From charity events like Jump for Hope to sustainable projects at Pondok Santi Estate, we are committed to making a positive impact. Learn how we engage with and contribute to the communities that inspire us and help shape our journey.</p>
         <div class="mb-15p sm:mb-0 mt-5p sm:mt-10p md:mt-5p">
-          <a href="/community.html" class="button" aria-label="">Find out more</a>
+          <a href="/community.html" class="button" aria-label="Learn more about our community initiatives.">Find out more</a>
       </div>
       </div>
     </div>
@@ -387,7 +387,7 @@ safety:
       <div class="col-span-1 pr-5p order-2 sm:order-none">
         <p class="pb-5p">At AJ Hackett International, our success is powered by the passion, expertise, and dedication of our extraordinary team. Each member brings a unique blend of skills and experiences that fuel our mission to push the boundaries of adventure tourism. From AJ Hackett, the trailblazing founder of bungy jumping, to our dynamic leaders and specialists, our team is the heart of our global operation. Together, they ensure every Skypark experience is exceptional, while continually shaping the future of adventure tourism. Get to know the visionaries who make our extraordinary adventures possible and learn how they’re making a difference around the world.</p>
         <div class="mb-15p sm:mb-0 mt-5p sm:mt-10p md:mt-5p">
-          <a href="/meet-the-team.html" class="button" aria-label="">Find out more</a>
+          <a href="/meet-the-team.html" class="button" aria-label="Learn more about the team at AJ Hackett International">Find out more</a>
         </div>
       </div>
     </div>
@@ -418,7 +418,7 @@ safety:
       <div class="col-span-1 pr-5p">
         <p class="pb-5p pt-5p sm:pt-0">Discover the driving force behind AJ Hackett International. Our purpose is to inspire and empower through extraordinary adventures, while our promise focuses on sustainability and innovation. Our core values of respect, adventure, innovation, safety, and experience guide everything we do. Explore more about how these principles shape our mission and define our approach to adventure tourism. </p>
         <div class="mb-15p sm:mb-0 mt-5p sm:mt-10p md:mt-5p">
-          <a href="/purpose-promise-values.html" class="button" aria-label="">Find out more</a>
+          <a href="/purpose-promise-values.html" class="button" aria-label="Learn about our purpose, promise, and values at AJ Hackett International.">Find out more</a>
       </div>
       </div>
     </div>
@@ -447,7 +447,7 @@ safety:
       <div class="col-span-1 pr-5p order-2 sm:order-none">
         <p class="pb-5p">At AJ Hackett International, safety is our top priority. We are dedicated to maintaining the highest standards in health, safety, and welfare across all our adventure activities. From rigorous training and site-specific protocols to state-of-the-art equipment and regular inspections, we ensure that every experience is both thrilling and secure. Learn more about our comprehensive safety practices and how we safeguard every adventure.</p>
         <div class="mb-15p sm:mb-0 mt-5p sm:mt-10p md:mt-5p">
-          <a href="/safety-management.html" class="button" aria-label="">Find out more</a>
+          <a href="/safety-management.html" class="button" aria-label="Learn more about our safety management practices.">Find out more</a>
         </div>
       </div>
     </div>
