--- a/pondok-santi-estate.html
+++ b/pondok-santi-estate.html
@@ -20,7 +20,7 @@ seo:
 header:
  - image: /images/pondok-santi-estate-on-gili-trawangan-lombok.png
    position: 70% 50%
-   label: 
+   label: Drone view of Pondok Santi Estate on Gili Trawangan, showcasing the lush, tropical landscape and resort layout.
    title: Pondok Santi Estate
    text: "Elegance in Paradise: Experience Gili Trawangan"
 gallery-images:
@@ -35,7 +35,7 @@ gallery-images:
  - img-url: /images/drone-shot-of-the-estate-pondok-santi-estate-gili-trawangan.png
    img-alt: Drone shot of the estate at Pondok Santi Estate, Gili Trawangan
  - img-url: /images/pondok-santi-estate-on-gili-trawangan-lombok.png
-   img-alt: 
+   img-alt: Drone view of Pondok Santi Estate on Gili Trawangan, showcasing the lush, tropical landscape and resort layout.
 ---
 
 <section class="max-w-screen-2xl mx-auto">
@@ -44,7 +44,7 @@ gallery-images:
         <p class="pb-10p sm:pb-5p xl:pb-2p"> Set amidst the <strong>idyllic shores of Gili Trawangan, Pondok Santi Estate offers an escape from the ordinary. From our luxurious accommodations to our exquisite dining experiences, every moment is crafted to elevate your senses.</strong> Welcome to a world where serenity meets sophistication, where every detail is designed to enchant and inspire. Welcome to Pondok Santi Estate.
         </p>
         <div class="mb-15p sm:mb-10p xl:mb-5p sm:mt-2p md:mt-0">
-            <a href="#" class="button" aria-label="">Visit Pondok Santi Estate</a>
+            <a href="https://pondoksanti.com/" class="button" aria-label="Visit Pondok Santi Estate website for more information">Visit Pondok Santi Estate</a>
         </div>
     </div>
   </div>
