--- a/skypark-aj-hackett.html
+++ b/skypark-aj-hackett.html
@@ -33,7 +33,7 @@ site:
    url-alt: Explore Skypark Cairns
    image: /images/cairns-australian-skypark-by-aj-hackett-international.png
    image-position: 50% 70%
-   image-alt:
+   image-alt: Crew member assisting a jumper at Skypark Cairns tower.
    experiences: 
    - "Bungy Jump" 
    - "Giant swing"
@@ -42,11 +42,11 @@ site:
    description: First opened in 1990, Skypark Cairns by AJ Hackett is a rainforest world of adventure that needs to be seen to be believed. Offering a range of exciting experiences, it has something for everyone—from thrill-seekers to spectators—and is home to Australia’s ONLY Bungy, Giant Swing, Cairns’ highest viewing platform, and Walk the Plank!
  - location: Macau
    id: macau
-   url:
-   url-alt:
+   url: https://www.skyparkmacau.com/
+   url-alt: Explore Skypark Macau
    image: /images/macau-skypark-by-aj-hackett-international.png
-   image-position:
-   image-alt:
+   image-position: 50% 50%
+   image-alt: Person mid-air during a bungy jump from the Macau Skypark tower.
    experiences: 
    - "Bungy Jump" 
    - "Sky Jump"
@@ -55,8 +55,8 @@ site:
    description: The sky is the playground when you visit Macau Tower. The top of the Macau Tower promises a sweeping, unobstructed view of the Macau islands, all the way to Hengqin, Zhuhai, and the neighboring mainland China. Skypark Macau Tower is home to the 2007 Guinness World Record for the Highest Commercial Bungy Jump (Building). At 233 meters, you can live on the edge and take the plunge or enjoy a leisurely walk around the Skywalk platform with your friends and family. Become your favorite superhero with Skyjump or conquer the world's only urban Tower Climb and Macau’s highest summit at 338 meters.
  - location: Sentosa
    id: sentosa
-   url:
-   url-alt:
+   url: https://www.skyparksentosa.com/
+   url-alt: Explore Skypark Sentosa
    image: /images/temp-img.jpg
    image-position:
    image-alt:
@@ -67,8 +67,8 @@ site:
    description: Standing 47 meters above the most stunning scenery in Singapore, you can take in the view across the ocean, take a deep breath, and then take the plunge at Singapore’s only bungy jump. On the Giant Swing, up to three people can experience a rush as they are winched 40 meters above the ground, enjoying an epic view across Siloso Beach and soaring at speeds of up to 120 km/h.
  - location: Normandie 
    id: normandie
-   url:
-   url-alt:
+   url: https://viaducdelasouleuvre.com/
+   url-alt: Explore Skypark Normandie
    image: /images/temp-img.jpg
    image-position:
    image-alt:
