--- a/accessibility.html
+++ b/accessibility.html
@@ -20,14 +20,14 @@ seo:
 header:
  - image: /images/accessibility-aj-hackett-international-banner.jpg
    position: 60% 50%
-   label: 
+   label: Man in a wheelchair waves to the camera, smiling after completing a bungy jump.
    title: Accessibility
    text: "Adventure Without Boundaries: Embracing Accessibility for All"
 gallery-images:
  - img-url: /images/accessibility-aj-hackett-international.png
-   img-alt: 
+   img-alt: Man in a wheelchair takes a thrilling bungy jump from a high tower, capturing the excitement and joy of the experience.
  - img-url: /images/normandie-accessibility-aj-hackett-international.png
-   img-alt: 
+   img-alt: Man in a wheelchair on the bungy jump platform, moments before leaping off with excitement and anticipation.
 ---
 
 <section class="max-w-screen-2xl mx-auto">
