--- a/community.html
+++ b/community.html
@@ -20,7 +20,7 @@ seo:
 header:
  - image: /images/community-aj-hackett-international.png
    position: 50% 50%
-   label: 
+   label: Community event at Skypark Cairns with people chatting and enjoying various activities together.
    title: Community
    text: "Rooted in Community: Engaging and Giving Back"
 ---
@@ -30,11 +30,11 @@ header:
   <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-10p sm:pb-0">
         <p class="pb-5p"> At AJ Hackett International, our commitment to community extends beyond thrilling adventures and breathtaking experiences. We deeply value the communities where we are located, recognizing the vital role they play in our success and mission. Our community-focused initiatives aim to foster meaningful connections, support local causes, and give back in impactful ways. From hosting charity events and participating in local projects to creating sustainable practices that benefit surrounding areas, we strive to make a positive difference. Discover how we are actively engaging with and contributing to the communities that inspire and support us. </p>
 <!--------Overview------------->
-    <a href="#">
+    <a href="#events">
         <p class="title-font text-xl pb-1p grow"> Events </p>
     </a>
     <hr class="pb-1p">
-    <a href="#">
+    <a href="#givingback">
         <p class="title-font text-xl pb-1p grow"> Giving Back </p>
     </a>
   </div>
@@ -43,7 +43,7 @@ header:
 
 <!---------------Events------------->
 <section class="max-w-screen-2xl mx-auto"> 
-  <div class="px-5p py-10p 2xl:py-5p">
+  <div class="px-5p py-10p 2xl:py-5p" id="events">
     <p class="title-font text-2xl sm:text-4xl pb-10p sm:pb-5p"> Events </p>
 
     <p class="title-font text-xl sm:text-2xl pb-2p"> Jump For Hope </p>
@@ -62,7 +62,7 @@ header:
 
 <!---------------Giving Back------------->
 <section class="max-w-screen-2xl mx-auto"> 
-  <div class="px-5p pb-15p xl:pb-10p">
+  <div class="px-5p pb-15p xl:pb-10p" id="givingback">
     <p class="title-font text-2xl sm:text-4xl pb-5p"> Giving Back </p>
     <p> At Pondok Santi Estate, the team is cultivating a “food forest.” This project is expected to produce such an abundance of food that we will be able to donate fruits and vegetables to local communities on Gili Trawangan and in Lombok.</p>
   </div>
