--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ safety:
 
     <div class="sm:grid sm:grid-cols-2 mb-5p">
         <div class="pr-5p">
-            <p class="mb-10p sm:mb-5p"> Welcome to the World of Adventure with AJ Hackett! Dive into the story of the man who turned adrenaline into an empire. Discover more about AJ's journey and vision
+            <p class="mb-10p sm:mb-5p"> Welcome to the World of Adventure with AJ Hackett! Dive into the story of the man who turned adrenaline into an empire. Discover more about AJ Hackett's journey and vision
             </p>
             <div class="mb-15p sm:mb-0 sm:mt-10p">
               <a href="/meet-aj-hackett.html" class="button" aria-label="Learn more about AJ Hackett and his adventure journey">Find out more</a>
