--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -56,21 +56,21 @@ quote-image-position: 50% 50%
         
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="sm:hidden pt-5p pb-10p">
-                <p> The bungy jumping industry that he started has opened bold new avenues for tourism and has expanded the minds of millions of people worldwide. AJ’s personal life and business philosophies match his have-a-go ethos. Aptly, for a man who made his name encouraging others to jump off bridges, AJ is drawn to risk and has developed a knack for managing danger to create a safe and predictable environment for bungy jumpers.
+                <p> The bungy jumping industry that he started has opened bold new avenues for tourism and has expanded the minds of millions of people worldwide. AJ Hackett’s personal life and business philosophies match his have-a-go ethos. Aptly, for a man who made his name encouraging others to jump off bridges, AJ Hackett is drawn to risk and has developed a knack for managing danger to create a safe and predictable environment for bungy jumpers.
                 </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
                 <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-2 }}" style="object-position: {{ page.image-2-position }};" alt="{{ page.image-2-alt }}" />
             </div>
             <div class="hidden sm:block pl-5p">
-                <p> The bungy jumping industry that he started has opened bold new avenues for tourism and has expanded the minds of millions of people worldwide. AJ’s personal life and business philosophies match his have-a-go ethos. Aptly, for a man who made his name encouraging others to jump off bridges, AJ is drawn to risk and has developed a knack for managing danger to create a safe and predictable environment for bungy jumpers.
+                <p> The bungy jumping industry that he started has opened bold new avenues for tourism and has expanded the minds of millions of people worldwide. AJ Hackett’s personal life and business philosophies match his have-a-go ethos. Aptly, for a man who made his name encouraging others to jump off bridges, AJ Hackett is drawn to risk and has developed a knack for managing danger to create a safe and predictable environment for bungy jumpers.
                 </p>
             </div>
         </div>
 
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="sm:pr-5p pt-5p pb-10p">
-                <p> In the commercial world, he has always preferred to leap boldly rather than to hold back. This has led to some hard lessons. The same taste for adventure that excited AJ as a child still drives the man today as he looks for new challenges and as his business moves into a period of unique growth and change.
+                <p> In the commercial world, he has always preferred to leap boldly rather than to hold back. This has led to some hard lessons. The same taste for adventure that excited AJ Hackett as a child still drives the man today as he looks for new challenges and as his business moves into a period of unique growth and change.
                 </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
