--- a/projects.html
+++ b/projects.html
@@ -20,27 +20,27 @@ seo:
 header:
  - image: /images/ongoing-projects-aj-hackett-international.png
    position: 50% 50%
-   label: 
+   label: Workers making improvements on the roof of Cairns Skypark by AJ Hackett, with construction in progress and safety measures in place.
    title: Current Projects
    text: Explore Our Ongoing Projects and Upgrades
 cairns-roof-image: /images/cairns-australian-skypark-by-aj-hackett-international.png
-cairns-roof-position:
-cairns-roof-alt:
+cairns-roof-position: 50% 50%
+cairns-roof-alt: Crew member assisting a jumper at Skypark Cairns tower.
 cairns-cyclone-image: /images/skypark-cairns-roof-cyclone-aj-hackett-international.png
-cairns-cyclone-position:
-cairns-cyclone-alt:
+cairns-cyclone-position: 50% 50%
+cairns-cyclone-alt: Secured structures and equipment at Cairns Skypark by AJ Hackett, tied down by the crew in preparation for an approaching cyclone.
 gallery-images:
   - img-url: /images/skypark-cairns-australia-project-new-roof-aj-hackett-international.png
-    img-alt: "Alt text for image 1"
+    img-alt: Main beams being installed on the roof at Skypark Cairns, showcasing the progress of the construction project.
     caption: "The shot above is when the main beams were installed."
   - img-url: /images/skypark-cairns-project-new-roof-aj-hackett-international.png
-    img-alt: "Alt text for image 2"
+    img-alt: Removal of the old roof at Skypark Cairns, capturing the team in action as they work on the roof renovation.
     caption: "The shot above shows when we removed the old roof."
   - img-url: /images/skypark-cairns-project-improvements-aj-hackett-international.png
-    img-alt: "Alt text for image 1"
+    img-alt: Dismantling of the old roof at Skypark Cairns, showing the crew carefully taking apart the structure during renovations.
     caption: "The shot above shows more of the dismantling process of the old roof."
   - img-url: /images/skypark-cairns-australia-new-roof-aj-hackett-international.png
-    img-alt: "Alt text for image 2"
+    img-alt: The newly installed roof at Skypark Cairns, showcasing the completed structure.
     caption: "The photo above shows the new roof."
 ---
 <!---------------Intro------------->
