--- a/reconciliation.html
+++ b/reconciliation.html
@@ -20,12 +20,12 @@ seo:
 header:
  - image: /images/skypark-cairns-australia-aj-hackett-international.png
    position: 50% 50%
-   label: 
+   label: Drone shot showing Skypark Cairns tower and surrounding Cairns area.
    title: Reconciliation
    text: Acknowledging the Past, Shaping the Future
 reconciliation-image: /images/reconciliation-skypark-australia-aj-hackett-international.png
-reconciliation-position:
-reconciliation-alt:
+reconciliation-position: 50% 50%
+reconciliation-alt: Traditional painting depicting the connection between Indigenous culture and the land.
 ---
 
 
