--- a/safety-management.html
+++ b/safety-management.html
@@ -20,7 +20,7 @@ seo:
 header:
  - image: /images/safety-management-banner-aj-hackett-international.png
    position: 50% 50%
-   label: 
+   label: Crew members ensuring safety and security at Skypark by AJ Hackett.
    title: Safety Management
    text: Safeguarding Every Adventure Through Rigorous Practices
 ---
