--- a/sustainability.html
+++ b/sustainability.html
@@ -22,24 +22,24 @@ seo:
 header:
  - image: /images/sustainability-aj-hackett-international-banner.png
    position: 50% 50%
-   label: 
+   label: Baby plants in a nursery, highlighting AJ Hackett International's sustainability efforts.
    title: Sustainability
    text: Our Commitment to a Greener Future
 pondok-1-image: /images/beautiful-pristine-beach-pondok-santi-gili-trawangan.png
-pondok-1-position:
-pondok-1-alt:
+pondok-1-position: 50% 50%
+pondok-1-alt: A serene hammock swaying between palm trees on the beach at Pondok Santi Estate, Gili Trawangan, overlooking the turquoise ocean.
 pondok-2-image: /images/sustainability-pondok-santi-estate-gili-trawangan-indonesia.png
-pondok-2-position:
-pondok-2-alt:
+pondok-2-position: 50% 50%
+pondok-2-alt: Newly sprouted baby plants growing at Pondok Santi Estate, Gili Trawangan, showcasing sustainable gardening efforts.
 cairns-image: /images/rainforest-skypark-cairns-australia-aj-hackett-international.png
-cairns-position:
-cairns-alt:
+cairns-position: 50% 50%
+cairns-alt: Lush, vibrant plants and diverse fauna surrounding the Skypark Cairns site, highlighting its natural beauty.
 natura-image: /images/normandie-natura-2000-logo.jpg
-natura-position:
-natura-alt:
+natura-position: 50% 50%
+natura-alt: Natura 2000 logo, representing conservation efforts and environmental protection.
 beehives-image: /images/bee-hives-at-souleuvre-viaduct.jpg
-beehives-position:
-beehives-alt:
+beehives-position: 50% 50%
+beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and eco-friendly initiatives.
 ---
 <!---------------Intro------------->
 <section class="max-w-screen-2xl mx-auto"> 
@@ -54,19 +54,19 @@ beehives-alt:
         <div class="pb-10p 2xl:pb-5p">
             <p> Check out some of the sustainability practices at AJ Hackett International: </p>
         </div>
-        <a href="#">
+        <a href="#pondoksustainability">
             <p class="title-font text-xl pb-1p grow"> Our Initiatives at Pondok Santi Estate </p>
         </a>
         <hr class="pb-1p">
-        <a href="#">
+        <a href="#cairnssustainability">
             <p class="title-font text-xl pb-1p grow"> Cairns Biodiversity Survey, Mapping, and Environmental Management Project </p>
         </a>
         <hr class="pb-1p">
-        <a href="#">
+        <a href="#normandiesustainability">
             <p class="title-font text-xl pb-1p grow"> Normandie Natura 2000 </p>
         </a>
         <hr class="pb-1p">
-        <a href="#">
+        <a href="#beehives">
             <p class="title-font text-xl pb-1p grow"> Bee Hives at Souleuvre Viaduct </p>
         </a>
     </div>
@@ -77,7 +77,7 @@ beehives-alt:
 
 <!---------------Pondok Sustainability------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-10p 2xl:pt-5p">
+    <div class="px-5p pt-10p 2xl:pt-5p" id="pondoksustainability">
         <p class="title-font text-2xl sm:text-4xl pb-5p"> Sustainability Initiatives at Pondok Santi Estate </p>
         <div class="sm:grid sm:grid-cols-2 grid-rows-2 gap-5 mb-5p">
             <!-- Text Content -->
@@ -112,7 +112,7 @@ beehives-alt:
 
 <!---------------Cairns Sustainability------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-15p md:pt-10p 2xl:pt-5p">
+    <div class="px-5p pt-15p md:pt-10p 2xl:pt-5p" id="cairnssustainability">
         <p class="title-font text-2xl sm:text-4xl pb-5p"> Cairns Biodiversity Survey, Mapping, and Environmental Management Project </p>
         <div class="sm:grid sm:grid-cols-2 gap-5 mb-5p">
             <!-- Text Content -->
@@ -135,7 +135,7 @@ beehives-alt:
 
 <!---------------Normandie Sustainability------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-15p md:pt-10p 2xl:pt-5p">
+    <div class="px-5p pt-15p md:pt-10p 2xl:pt-5p" id="normandiesustainability">
         <p class="title-font text-2xl sm:text-4xl pb-5p"> Normandie Natura 2000 </p>
         <div class="sm:grid sm:grid-cols-2 gap-5 mb-5p">
             <!-- Text Content -->
@@ -155,7 +155,7 @@ beehives-alt:
 
 <!---------------Beehives------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-10p pb-15p lg:pb-10p 2xl:pt-5p 2xl:pb-5p">
+    <div class="px-5p pt-10p pb-15p lg:pb-10p 2xl:pt-5p 2xl:pb-5p" id="beehives">
         <p class="title-font text-2xl sm:text-4xl pb-5p"> Bee Hives at Souleuvre Viaduct </p>
 
         <div class="sm:grid sm:grid-cols-2 gap-5 mb-5p">
