--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@ seo:
 header:
  - image: /images/contact-aj-hackett-international.png
    position: 50% 50%
-   label: 
+   label: AJ Hackett smiling on top of a bungy tower, enjoying the moment.
    title: Get In Touch
    text: "We’re Here to Help—Reach Out Anytime"
 ---
