--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -26,14 +26,13 @@ seo:
 header:
  - image: /images/family-swing-cairns-aj-hackett-international.png
    position: 27% 50%
-   label: 
+   label: A family of three, a child, a man, and a woman, enjoying a fun activity together at Skypark by AJ Hackett.
    title: Experiences
    text: Explore Unforgettable Thrills and Sky-High Fun
 quote-image: /images/temp-img.jpg
 experience:
  - name: Bungy
    id: "bungy"  
-   url: "https://example.com/bungee"
    image: /images/temp-img.jpg
    image-position: center
    image-alt: "Bungy Jump"
@@ -50,21 +49,20 @@ experience:
      img-alt:
    locations: 
    - name: "Cairns"
-     url: "https://example.com/cairns"
-     url-alt: "Visit Cairns"
+     url: skypark-aj-hackett.html#cairns
+     url-alt: Find out more about Skypark Cairns
    - name: "Sentosa"
-     url: "https://example.com/sentosa"
-     url-alt: "Visit Sentosa"
+     url: skypark-aj-hackett.html#sentosa
+     url-alt: Find out more about Skypark Sentosa
    - name: "Macau"
-     url: "https://example.com/sentosa"
-     url-alt: "Visit Macau"
+     url: skypark-aj-hackett.html#macau
+     url-alt: Find out more about Skypark Macau
    - name: "Normandie"
-     url: "https://example.com/sentosa"
-     url-alt: "Visit Normandie"
-   description: Inspired by the Vanuatu ritual called land diving and the Oxford University Dangerous Sports Club’s experimental jumps in the 1970s, AJ and fellow adventurer Chris Sigglekow sought ways to make bungy jumping safe. By the mid-80s, AJ had created a super-stretchy elastic bungy cord that performed safely and consistently, with cords created at custom lengths that allowed for various jump heights and locations.
+     url: skypark-aj-hackett.html#normandie
+     url-alt: Find out more about Skypark Macau
+   description: Inspired by the Vanuatu ritual called land diving and the Oxford University Dangerous Sports Club’s experimental jumps in the 1970s, AJ Hackett and fellow adventurer Chris Sigglekow sought ways to make bungy jumping safe. By the mid-80s, AJ Hackett had created a super-stretchy elastic bungy cord that performed safely and consistently, with cords created at custom lengths that allowed for various jump heights and locations.
  - name: Swings
    id: "swings" 
-   url: "https://example.com/bungee"
    image: /images/temp-img.jpg
    image-position: center
    image-alt: "Swings"
@@ -81,18 +79,17 @@ experience:
      img-alt:
    locations: 
    - name: "Cairns"
-     url: "https://example.com/cairns"
-     url-alt: "Visit Cairns"
+     url: skypark-aj-hackett.html#cairns
+     url-alt: Find out more about Skypark Cairns
    - name: "Sentosa"
-     url: "https://example.com/sentosa"
-     url-alt: "Visit Sentosa"
+     url: skypark-aj-hackett.html#sentosa
+     url-alt: Find out more about Skypark Sentosa
    - name: "Normandie"
-     url: "https://example.com/sentosa"
-     url-alt: "Visit Normandie"
+     url: skypark-aj-hackett.html#normandie
+     url-alt: Find out more about Skypark Normandie
    description: First introduced in the year 2000, you will awaken your inner child with the giant swing or 'swing.' Whether you’re in Sentosa flying above the beach, in Cairns where the Barrier Reef meets the rainforest, or in Normandy next to the impressive pillars of the viaduct, we guarantee a rush like no other with vistas only found in these special places. All of our swings cater to solo, dual, or triple customers going at once, with speeds reaching 130 km/h in 3.5 seconds! It is the perfect activity for you and your friends to enjoy together and push your limits.
  - name: Zipline
    id: "zipline" 
-   url: "https://example.com/bungee"
    image: /images/temp-img.jpg
    image-position: center
    image-alt: "Zipline"
@@ -109,12 +106,11 @@ experience:
      img-alt:
    locations: 
    - name: "Normandie"
-     url: "https://example.com/sentosa"
-     url-alt: "Visit Normandie"
+     url: skypark-aj-hackett.html#normandie
+     url-alt: Find out more about Skypark Normandie
    description: The giant zipline at Skypark Normandie, known as the 'Scable,' is the ideal activity to start exploring your limits. This activity will give you a taste of the unique sensations that we offer on-site and is also the best way to discover our valley and its amazing flora and fauna. Starting from a specially designed launch area, you will be released onto our 400m cable at speeds reaching 100 km/h, where you, by yourself or with your partner, will get a great introduction to our adrenaline-packed activities.
  - name: Skybridge & Skycube
    id: "skybridge" 
-   url: "https://example.com/bungee"
    image: /images/temp-img.jpg
    image-position: center
    image-alt: "Skybridge"
@@ -131,12 +127,11 @@ experience:
      img-alt:
    locations: 
    - name: "Normandie"
-     url: "https://example.com/sentosa"
-     url-alt: "Visit Normandie"
+     url: skypark-aj-hackett.html#normandie
+     url-alt: Find out more about Skypark Normandie
    description: For more than 30 years, AJ Hackett has created many thrilling activities from this 140-meter-long footbridge. The skybridge is both the access point to the activities of Skypark Normandie and a unique place to be as close as possible to the practitioners who come here to take on many challenges. At the entrance, you can enjoy a terrace to watch the departure of the giant zip line. As you advance on the footbridge, you must gradually master the void that presents itself beneath your feet—10, 20, 30, and then 60 meters of emptiness to arrive at the second pile of the viaduct. At 140 meters, it can feel long when, with each step, you have to control your fear of heights. But in the end, it is the promise of a unique point of view of the Souleuvre valley—a 360-degree panorama of this preserved and protected nature.
  - name: Walk The Plank
    id: "walktheplank" 
-   url: "https://example.com/bungee"
    image: /images/temp-img.jpg
    image-position: center
    image-alt: "Walk The Plank"
@@ -153,12 +148,11 @@ experience:
      img-alt:
    locations: 
    - name: "Cairns"
-     url: "https://example.com/cairns"
-     url-alt: "Visit Cairns"
+     url: skypark-aj-hackett.html#cairns
+     url-alt: Find out more about Skypark Cairns
    description: As in the olden days, try yourself by walking the plank, perched 50 m in the air and 140 m above sea level, with amazing views of the ocean and rainforest. This activity is the perfect way to introduce yourself to heights. Our team will guide you along the way to help you push your boundaries. If you’re confident enough, we will let you dangle over the edge of the plank for the perfect photo opportunity!
  - name: Luge
    id: "luge" 
-   url: "https://example.com/bungee"
    image: /images/temp-img.jpg
    image-position: center
    image-alt: "Luge"
@@ -175,12 +169,11 @@ experience:
      img-alt:
    locations: 
    - name: "Normandie"
-     url: "https://example.com/sentosa"
-     url-alt: "Visit Normandie"
+     url: skypark-aj-hackett.html#normandie
+     url-alt: Find out more about Skypark Normandie
    description: A unique sled with speeds up to 45 km/h. Sledding is a simple, family-friendly, low-cost pleasure, ideal for both summer and winter. A leisure activity that brings you great sliding sensations without effort, sledding can be practiced alone or in pairs. It can be enjoyed from 3 years old and accommodates individuals weighing up to 180 kg. Make your way down the valley for a fun-filled experience immersed in the Natura 2000 protected area; you may see a cow or two in the adjacent pastures!
  - name: Adventure Parks
    id: "adventureparks" 
-   url: "https://example.com/bungee"
    image: /images/temp-img.jpg
    image-position: center
    image-alt: "Adventure Parks"
@@ -197,12 +190,11 @@ experience:
      img-alt:
    locations: 
    - name: "Normandie"
-     url: "https://example.com/sentosa"
-     url-alt: "Visit Normandie"
+     url: skypark-aj-hackett.html#normandie
+     url-alt: Find out more about Skypark Normandie
    description: "The perfect activity for all ages, with multi-leveled courses, allows you to challenge yourself through different obstacles ranging from mini ziplines to roped walkways and climbing challenges. We offer two types of adventure parks: the original, where you are harnessed the whole way through the activities, or the new generation, which is netted! This means no harness is needed—just your own bravery as you try to complete the challenges ahead!"
  - name: Climbing Walls
    id: "climbingwalls" 
-   url: "https://example.com/bungee"
    image: /images/temp-img.jpg
    image-position: center
    image-alt: "Climbing Walls"
@@ -219,8 +211,8 @@ experience:
      img-alt:
    locations: 
    - name: "Normandie"
-     url: "https://example.com/sentosa"
-     url-alt: "Visit Normandie"
+     url: skypark-aj-hackett.html#normandie
+     url-alt: Find out more about Skypark Normandie
    description: "Challenge yourself by climbing on our World Cup-sized walls, where all levels of difficulty are on display for you to try out! Our team of trained operators will ensure you give it your best while keeping you safe during your climb with the use of harnesses and all relevant equipment."
 ---
 
@@ -231,39 +223,35 @@ experience:
         <p class="pb-5p sm:pb-0"> Check out each individual experience of Skypark by AJ Hackett.</p>
     </div>
 
-    <a href="#">
+    <a href="#bungy">
         <h3 class="title-font text-xl pb-1p grow"> Bungy </h3>
     </a>
     <hr class="pb-1p">
-    <a href="#">
+    <a href="#swings">
         <h3 class="title-font text-xl pb-1p grow"> Swings </h3>
     </a>
     <hr class="pb-1p">
-    <a href="#">
+    <a href="#ziplines">
         <h3 class="title-font text-xl pb-1p grow"> Ziplines </h3>
     </a>
     <hr class="pb-1p">
-    <a href="#">
+    <a href="#skybridge">
         <h3 class="title-font text-xl pb-1p grow"> Skybrige & Skycube </h3>
     </a>
     <hr class="pb-1p">
-    <a href="#">
+    <a href="#walktheplank">
         <h3 class="title-font text-xl pb-1p grow"> Walk The Plank </h3>
     </a>
     <hr class="pb-1p">
-    <a href="#">
+    <a href="#luge">
         <h3 class="title-font text-xl pb-1p grow"> Luge </h3>
     </a>
     <hr class="pb-1p">
-    <a href="#">
+    <a href="#adventureparks">
         <h3 class="title-font text-xl pb-1p grow"> Adventure Parks  </h3>
     </a>
     <hr class="pb-1p">
-    <a href="#">
-        <h3 class="title-font text-xl pb-1p grow"> Climbing Walls </h3>
-    </a>
-    <hr class="pb-1p">
-    <a href="#">
+    <a href="#climbingwalls">
         <h3 class="title-font text-xl pb-1p grow"> Climbing Walls </h3>
     </a>
     <hr class="pb-1p">
