--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -33,7 +33,7 @@ image-3: /images/adventure-tourism-aj-hackett-international.png
 image-3-position: 50% 50%
 image-3-alt: AJ Hackett walking towards the camera with a smile at one of the Skypark sites, exuding excitement and joy.
 quote-image: /images/aj-hackett-bungy-aj-hackett-international.png
-quote-image-position: 50% 50%
+quote-image-position: 70% 10%
 ---
 
 <!-----Intro Section and Text-------->
@@ -84,17 +84,18 @@ quote-image-position: 50% 50%
 <!-----BG and Text-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="mt-10p">
-        <div class="bg-cover bg-no-repeat relative"
+    <div class="mt-15p sm:mt-20p md:mt-15p relative">
+        <div class="bg-cover bg-no-repeat" 
             style="background-image: url('{{ page.quote-image }}'); height: 24rem; background-position: {{ page.quote-image-position }};">
-            <div class="flex flex-col justify-center h-full p-5">
-                <div class="bg-dark-blue p-5 absolute bottom-0 left-0 right-0 rounded-lg" style="margin-left: -32px; width: 64%;">
-                    <p class="header-font text-2xl sm:text-6xl">Challenge life. <br> Challenge yourself.</p>
+            <div class="absolute inset-0 flex items-center justify-center p-5p">
+                <div class="bg-dark-blue p-6 rounded-lg text-center opacity-80">
+                    <p class="header-font text-2xl sm:text-4xl lg:text-6xl text-white">Challenge life. <br> Challenge yourself.</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
 
 
 
