--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -37,7 +37,7 @@ values-image-alt:
 <!-----Purpose-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-15p sm:pt-10p">
+    <div class="px-5p pt-15p sm:pt-10p" id="purpose">
         <div class="pb-5p">
             <p class="title-font text-2xl sm:text-4xl"> Our Purpose </p>
         </div>
@@ -58,7 +58,7 @@ values-image-alt:
 <!-----Promise-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-15p sm:pt-10p xl:pt-5p">
+    <div class="px-5p pt-15p sm:pt-10p xl:pt-5p" id="promise">
         <div class="pb-5p">
             <p class="title-font text-2xl sm:text-4xl"> Our Promise </p>
         </div>
@@ -80,7 +80,7 @@ values-image-alt:
 <!-----Values-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-15p md:pb-10p">
+    <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-15p md:pb-10p" id="values">
         <div class="pb-5p">
             <p class="title-font text-2xl sm:text-4xl"> Our Values </p>
         </div>
