--- a/reconciliation.html
+++ b/reconciliation.html
@@ -26,7 +26,7 @@ header:
 reconciliation-image: /images/reconciliation-skypark-australia-aj-hackett-international.png
 reconciliation-position: 50% 50%
 reconciliation-alt: Traditional painting depicting the connection between Indigenous culture and the land.
-reconciliation-pdf: /assets/pdfs/reconciliationajhackett.pdf
+reconciliation-pdf: /reconciliation-ajhi.pdf
 ---
 
 
