--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -34,20 +34,20 @@ quote-position: 50% 23%
 experience:
  - name: Bungy
    id: "bungy"  
-   image: /images/temp-img.jpg
-   image-position: center
-   image-alt: "Bungy Jump"
+   image: /images/skypark-aj-hackett-international-banner-image.jpg
+   image-position: 20% 50%
+   image-alt: "A woman captured mid-air in a bungy jump, with the photo taken from the vantage point where she leaped off."
    gallery-images:
-   - img-url: /images/temp-img.jpg
-     img-alt:
-   - img-url: /images/temp-img.jpg
-     img-alt:
-   - img-url: /images/temp-img.jpg
-     img-alt:
-   - img-url: /images/temp-img.jpg
-     img-alt:
-   - img-url: /images/temp-img.jpg
-     img-alt:
+   - img-url: /images/bungy-jump-macau-skypark-aj-hackett-international.png
+     img-alt: Woman standing on the platform at Macau Skypark, poised to begin her bungy jump.
+   - img-url: /images/bungy-jump-skypark-sentosa-singapore-aj-hackett-international.png
+     img-alt: Man mid-bungy jump at Skypark Sentosa, with a view of the beach below.
+   - img-url: /images/aj-at-skypark-normandie-france-aj-hackett-international.png
+     img-alt: AJ Hackett and a woman enjoying a tandem bungy jump at Skypark Normandie in the scenic Souleuvre Valley.
+   - img-url: /images/sunset-bungy-jump-skypark-sentosa-singapore-aj-hackett-international.png
+     img-alt: Person doing a bungy jump at sunset at Skypark Sentosa, with vibrant sky colors in the background.
+   - img-url: /images/tandem-cairns-skypark-aj-hackett-international.png
+     img-alt: Tandem jump at Cairns Skypark by AJ Hackett International.
    locations: 
    - name: "Cairns"
      url: skypark-aj-hackett.html#cairns
